Add headless browser tools using Lightpanda and Puppeteer
Introduce 8 browser tools (navigate, read_page, click, type, select,
scroll, back, close) that let the agent interact with websites via a
headless browser. A singleton BrowserSession manages the Lightpanda
CDP server and Puppeteer connection with lazy init and cleanup.

Also refactor index.js to extract event logging and result printing
into helper functions for readability.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.2",
+    "@lightpanda/browser": "^1.0.1",
     "@tavily/core": "^0.7.1",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "puppeteer-core": "^24.36.1"
   }
 }
