Add multi-provider LLM support with --provider and --model CLI flags
Introduce a provider abstraction layer so the agent can use either
Anthropic or OpenAI as its LLM backend. Providers are selected via
CLI flags, environment variables (LLM_PROVIDER, LLM_MODEL), or
defaults. Prettify console output with colored bullets and tree
connectors for event logging.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@lightpanda/browser": "^1.0.1",
     "@tavily/core": "^0.7.1",
     "dotenv": "^17.2.3",
+    "openai": "^4.77.0",
     "puppeteer-core": "^24.36.1"
   }
 }
