Add Ollama provider support and improve browser tool output
Add OllamaProvider that subclasses OpenAIProvider to support local LLMs
via Ollama's OpenAI-compatible API. Includes robust JSON parsing in
Planner for smaller models, and enhanced CLI output showing URL and
page title for browser_navigate and browser_read_page tool steps.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 ANTHROPIC_API_KEY=your-api-key-here
 TAVILY_API_KEY=your-tavily-api-key-here
+
+# Ollama (local LLM) - no API key needed
+# OLLAMA_BASE_URL=http://localhost:11434/v1
